boinc (7.0.36+dfsg-2) UNRELEASED; urgency=low

  * Removed some old patches (those not in series anymore).
  * Removed the deprecated DMUA field from debian/control.

 -- Guo Yixuan <culu.gyx@gmail.com>  Sun, 23 Sep 2012 00:10:12 +0800

boinc (7.0.36+dfsg-1) unstable; urgency=low

  * Team upload.

  [ Gianfranco Costamagna ]
  * New upstream version

  [ Guo Yixuan ]
  * Updated api_NULL_not_defined.patch.
  
  [ Steffen Moeller ]
  * Updated slot_dir_source_trace.patch.
  * Updated opendir_error_messages.patch.

 -- Debian BOINC Maintainers <pkg-boinc-devel@lists.alioth.debian.org>  Sun, 16 Sep 2012 21:28:52 +0200

boinc (7.0.34+dfsg-6) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * Fixing upstream bug 
    https://boinc.berkeley.edu/trac/ticket/1168
    on dir_scan usage.

  [ Guo Yixuan ]
  * Updated debian/copyright to new format, added a section about api/ttf/*.
  * Clean up debian/rules.

 -- Steffen Moeller <moeller@debian.org>  Sun, 02 Sep 2012 11:04:19 +0200

boinc (7.0.34+dfsg-5) UNRELEASED; urgency=low

  * Added better error messages for opendir() failures

 -- Steffen Moeller <moeller@debian.org>  Sat, 01 Sep 2012 15:13:26 +0200

boinc (7.0.34+dfsg-4) unstable; urgency=low

  [ Guo Yixuan ]
  * Fix of debian/patch on pathlength
  [ Steffen Moeller ]
  * Corrected handling of memory reallocation in client/stream.cpp
  * Improved cpptest cleanliness

 -- Steffen Moeller <moeller@debian.org>  Sat, 01 Sep 2012 15:13:26 +0200

boinc (7.0.34+dfsg-3) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * Improving error message on directory that cannot be opened
  * Fixing a file descriptor leak in read_ppm_file (api/gutil.cpp)

  [ Guo Yixuan ]
  * Removed dependency on dh-buildinfo, no longer used.
  * Fixed a bug in our patches that truncated filename.

 -- Steffen Moeller <moeller@debian.org>  Sun, 26 Aug 2012 18:20:13 +0200

boinc (7.0.34+dfsg-2) unstable; urgency=low

  [ Steffen Moeller ]
  * Reacting to ftpmasters' comments