@@ -1,9 +1,13 @@
 boinc (7.0.36+dfsg-2) UNRELEASED; urgency=low
 
+  [ Guo Yixuan ]
   * Removed some old patches (those not in series anymore).
   * Removed the deprecated DMUA field from debian/control.
 
- -- Guo Yixuan <culu.gyx@gmail.com>  Sun, 23 Sep 2012 00:10:12 +0800
+  [ Gianfranco Costamagna ]
+  * without boinclib_shared.patch boinc FTBFS, changed the order of patch
+
+ -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Fri, 12 Oct 2012 13:26:54 +0200
 
 boinc (7.0.36+dfsg-1) unstable; urgency=low
 
